--- a/ticker-client/app/index.html
+++ b/ticker-client/app/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h4>Ticker</h4>
 
-    <ul class="menu">
+    <ul class="list-inline">
         <li><a href="#/view1">view1</a></li>
         <li><a href="#/view2">view2</a></li>
     </ul>
